# resume-pipeline

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  data
.github/: funding.yml
.github/workflows/: ci.yml  release.yml
data/: education.yaml  experience.yaml  jobtitles.yaml  professional_summary.yaml  profile.yaml  projects.yaml
data/templates/: default_resume_template.typ  headless_head_hunter.typ
data_sample_rename_to_data/: jobtitles.yaml
data_sample_rename_to_data/templates/: headless_head_hunter.typ
src/: app.rs  main.rs  models.rs  pdf.rs  typst_backend.rs
src/models/: mod.rs  resume.rs  types.rs
src/tests/: app_tests.rs
src/ui/: education.rs  experience.rs  experience_bullets.rs  job_titles.rs  mod.rs  professional_summary.rs  profile.rs  projects.rs  status.rs  welcome.rs
templates/: headless_head_hunter.typ
