[package]
name = "resume-pipeline"
version = "0.1.4"
description = "create multiple resumes from a YAML source"
authors = ["cntrvsy <benintangana@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
# Update these to the correct stable versions
typst = "0.14.2"
typst-pdf = "0.14.2"

[dependencies.typst-as-lib]
version = "0.15.0"
features = ["typst-kit-fonts", "typst-kit-embed-fonts"]

[dependencies.typst-kit]
version = "0.14.2"
features = ["fonts", "embed-fonts"]


# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
