[package]
name = "resume-pipeline"
version = "0.2.5"
description = "create multiple resumes from a YAML source"
authors = ["cntrvsy <benintangana@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# --- TYPST CORE DEPS ---
typst = "0.12.0"       # Core compiler
typst-pdf = "0.12.0"   # PDF exporter
time = "0.3"           # Required for the 'World' environment
comemo = "0.4"         # Typst's caching system
bytes = "1.0"          # For handling embedded font buffers

# Remove typst-as-lib
# Remove typst-kit


# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
